# KairoPhysicsEngine

./: .gitignore  Broadphase.cppm  Buoyancy.cppm  CMakeLists.txt  Collider.cppm  ContactSolver.cppm  KairoPhysicsEngine.cppm  Narrowphase.cppm  PhysicsDebug.cppm  PhysicsEngineTypes.cppm  PhysicsMaterial.cppm  PhysicsWorld.cppm  ProjectileSystem.cppm  README.md  RigidBody.cppm
sandbox/: DemoScene.cppm  KairoPhysicsGlfwSandbox.cpp  KairoPhysicsSandbox.cpp  KairoPhysicsSandbox.cppm  PhysicsDebugRenderer.cppm  SandboxApp.cppm  SandboxTypes.cppm  TerminalRenderer.cppm
sandbox/examples/: main.cpp
scenes/: box_stack.kphys  falling_sphere.kphys  friction_ramp.kphys  joint_test.kphys  projectile_wall.kphys  restitution_test.kphys  sleeping_test.kphys  sphere_collision.kphys  stress_500.kphys  trigger_volume.kphys  water_buoyancy.kphys
tests/: PhysicsEngineTests.cpp
